modifica button header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <div class="container-main">
         <!-- container header -->
         <div class="header">
-            <div class="box-button"><button class="btn"> <img src="img/table-cells-solid.svg" alt="" class="img-button"> speaker view</button></div>
-            <!-- <div class="box-img-header">Speaker view<img src="img/table-cells-solid.svg" alt="" class="img-header"></div>
-            <div class="box-img-header"><img src="img/maximize-solid.svg" alt=""class="img-header"></div> -->
+            <div class="box-button"><button class="btn"> <img src="img/table-cells-solid.svg" alt="" class="img-button">  Speaker View</button></div>
+            
         </div>
         <!-- container colonne immagini -->
         <div class="row">
