modifiche pulsanti barra superiore

--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <!-- container principale -->
+
     <div class="container-main">
         <!-- container header -->
         <div class="header">
-            <div class="box-button"><button class="btn"> <img src="img/table-cells-solid.svg" alt="" class="img-button">  Speaker View</button></div>
-            
+            <div class="box-button">
+                <button class="btn"> <img src="img/table-cells-solid.svg" alt="" class="img-button">  Speaker View</button>
+                <button class="btn"> <img src="img/maximize-solid.svg" alt="" class="img-button"></button>
+            </div>            
         </div>
+
         <!-- container colonne immagini -->
         <div class="row">
             <div class="col">
