--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
         <!-- container colonne immagini -->
         <div class="row">
             <div class="col">
-                <img src="https://picsum.photos/200" alt="" class="img-col">
+                <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
+                <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt=""> 
+            </div>
+            <div class="col">
+                <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -30,6 +40,7 @@
             </div>
             <div class="col">
                 <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -38,6 +49,7 @@
             </div>
             <div class="col">
                 <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -46,6 +58,7 @@
             </div>
             <div class="col">
                 <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -54,6 +67,7 @@
             </div>
             <div class="col">
                 <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -62,14 +76,7 @@
             </div>
             <div class="col">
                 <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                
-            </div>
-            <div class="col">
-                <img src="https://picsum.photos/200" alt="">
+                <button class="btn-img"> <img src="img/microphone-slash-solid.svg" alt="" class="img-button">Pluto Aldair</button>
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
                 <img src="https://picsum.photos/200" alt="">
@@ -82,9 +89,48 @@
         <!-- container barra inferiore con icone -->
         <div class="row-footer">
             <div class="col-small1">
-                
+                <div class="float-left">
+                    <img src="img/microphone-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">mute</span> 
+                </div>
+                <div class="float-right" >
+                    <img src="img/video-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">stop video</span>
+                </div>              
             </div>
             <div class="col-large">
+                <div class="box-col-large float-right">
+                    <img src="img/ellipsis-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">more</span> 
+                </div> 
+                <div class="box-col-large float-right">
+                    <img src="img/table-cells-large-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">breakout rooms</span> 
+                </div> 
+                <div class="box-col-large float-right">
+                    <img src="img/record-vinyl-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">record</span> 
+                </div> 
+                <div class="box-col-large float-right">
+                    <img src="img/share-from-square-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">share screen</span> 
+                </div> 
+                <div class="box-col-large float-right">
+                    <img src="img/comment-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">chat</span> 
+                </div> 
+                <div class="box-col-large float-left">
+                    <img src="img/user-plus-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">invite</span> 
+                </div> 
+                <div class="box-col-large float-left">
+                    <img src="img/user-group-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">Manage Partecipants</span> 
+                </div> 
+                <div class="box-col-large float-left">
+                    <img src="img/chart-column-solid.svg" alt="" class="img-footer">
+                    <span class="text-footer">polling</span> 
+                </div> 
 
             </div>
             <div class="col-small2">
